--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   "dependencies": {
     "@prisma/client": "^4.4.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.21",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "yup": "^1.0.2", 
-    "dotenv": "^8.2.0"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "18.14.6",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
